--- a/flower.css
+++ b/flower.css
@@ -1,10 +1,18 @@
 
-
+/* First Section */
 .first-section{ background-color: #f5f5e4;background-repeat: no-repeat; background-position: center; display: flex; width: 100%; height: 80vh;  background-size: cover; margin-bottom: 10px;}
 
-.first-article{ margin-left:25%; padding-left: 7%; padding-top: 5%; text-align: left; margin-left: 50px; }
+.first-article{ padding-left: 180px; padding-top: 100px; text-align: left;   width: 50%;
+/* border: 2px solid black; */
+}
 
-.first-article-two img{ height: 437px; align-items: end; padding-top: 15px; padding-left: 35%;}
+.first-article-two{
+    /* border: 2px solid black;  */width: 50%; 
+}
+
+.first-article-two img{ height: 500px; align-items: end;  
+padding: 150px 100px 0 100px;}
+
 .head-one{
     font-size: 40px; padding-top: 10px;
 }
@@ -12,34 +20,45 @@
 
 .para-one{ font-size: 18px;}
 
+/* sceond Section */
 
-
-.second-section{ align-items: center; margin-top: 15vh; width: 100%; height: 100vh;}
+.second-section{ align-items: center; margin-top: 15vh; width: 100%; height: 100vh;
+border: 2px solid black;
+}
 
 .second-article{
-    text-align: center;  justify-content: center;
+    text-align: center;  justify-content: center; border: 2px solid black;
 }
 .head-two{ font-size: 30px;
 }
 .sec-sec-div{
     padding:0 10%;  display: flex; text-align: center;  
-    justify-content: center;
-    align-items: center;
+    justify-content: center; align-items: center;
+    border: 2px solid black;
 }
 .div-three{
-    margin-top: 8vh; display: flex;    text-align: center;
+    margin-top: 8vh; display: flex;  border: 2px solid black; width: 100%;
 }
-.img-one{ height: 350px; background-color: rgb(226, 243, 243); border-top-left-radius: 180px ; border-top-right-radius: 180px ; padding-top: 35px; width: 250px; margin-right: 10vh;}
+.img-one{ height: 350px; background-color: rgb(226, 243, 243); border-top-left-radius: 180px ; border-top-right-radius: 180px ; padding-top: 35px; width: 250px; margin-right: 10px;
 
-.img-two{ height: 350px; background-color: rgb(199, 235, 183); border-top-left-radius: 180px ; border-top-right-radius: 180px ; padding-top: 35px; width: 250px; margin-right: 10vh; }
+    justify-content: center; align-items: center;}
 
-.img-three{ height: 350px; background-color: rgb(238, 231, 237); border-top-left-radius: 180px ; border-top-right-radius: 180px ; padding-top: 35px; width: 250px }
+.img-two{ height: 350px; background-color: rgb(199, 235, 183); border-top-left-radius: 180px ; border-top-right-radius: 180px ; padding-top: 35px; width: 250px; margin-right: 10px; 
 
-.div-three-one{ text-align: center; width: 100%;  justify-content: center;align-items: center;}
-.div-three-one p{text-align: center; align-items: center; }
+}
 
+.img-three{ height: 350px; background-color: rgb(238, 231, 237); border-top-left-radius: 180px ; border-top-right-radius: 180px ; padding-top: 35px; width: 250px; 
+    justify-content: center; align-items: center;}
 
+.div-three-one{  width: 100%;  justify-content: center;align-items: center;
+    border: 2px solid black;
+}
+.div-three-one p{text-align: center;  }
+.div-three-one img{
+justify-content: center; align-items: center;
+}
 
+/* Third Section */
 
 .third-section{ display: flex; background-color: lightyellow; background-size: cover; background-repeat: no-repeat; margin-top: 10vh; width: 100%; height: 80vh; }
 .third-sec-art{ width: 50%; text-align: center; padding: 5% ;}
@@ -48,7 +67,7 @@
 .sec-btn{ padding: 10px 25px; border-radius: 10px; background-color: aquamarine; font-weight: 600;}
 
 
-
+/* Fourth Section */
 
 .Forth-section{ margin-top:8%;}
 .Forth-sec-art{ text-align: center; margin: 5% 0;}
@@ -56,6 +75,7 @@
 .Forth-sec-art-second{ display: flex; justify-content: space-between; margin: 5% 10%;  }
 .forth-sec-img-four{  width: 23%; height: 42vh; }
 
+/* Fifth Section */
 
 .Fifth-section{ background-image:  url("Flower Asset/Rectangle\ 9.png"); 
  height: 60vh; object-fit: contain; align-items: center; margin-left: 130px; margin-right: 130px;
@@ -68,13 +88,13 @@
 
 
 
-
+/* Footer */
 .footer-one{ background-color: black; color: aliceblue; text-align: center; padding: 3% 0; margin: none;}
 #span-one{color: crimson;}
 #para-foot{ font-size: 10px;}
 
 
-
+/* Section Ten */
 .section-ten{
     display: flex; background-color: lightgray; justify-content: space-around; padding: 15px; margin-left:37vh; margin-right: 37vh;
 }
@@ -83,5 +103,32 @@
     padding-left: 12vh;
 }
 #img-ten-one{ padding-left: 12vh;
+}
 
+
+@media screen and (max-width:576px) {
+    body{
+        border:5px solid black
+    }
+    .first-article-two{display: none;  }
+    .first-section{ width: 100%; height: 100%;}
+    .first-article{ text-align: center; padding-bottom: 10px;}
+
+
+    
+    .sec-sec-div{display: flex;  height: 100%; margin-top: 20px; }
+    .div-three{
+         height: 100%; flex-direction: column; }
+    .div-three-one{flex-direction: column; justify-content: center; align-items: center; object-fit: cover;}
+
+.div-three-one img{
+    height: 150px;  width: 150px;border-top-right-radius: 150px; border-top-left-radius:150px ; justify-content: center; align-items: center; object-fit: cover; flex-direction: column; margin: auto;
+}
+    .section-ten{
+       display: none;
+    }
+
+    .third-sec-art-two img{
+        display: none;
+    }
 }
