--- a/flower.css
+++ b/flower.css
@@ -23,25 +23,29 @@ padding: 150px 100px 0 100px;}
 /* sceond Section */
 
 .second-section{ align-items: center; margin-top: 15vh; width: 100%; height: 100vh;
-border: 2px solid black;
+/* border: 2px solid black; */
 }
 
 .second-article{
-    text-align: center;  justify-content: center; border: 2px solid black;
+    text-align: center;  justify-content: center; 
+    /* border: 2px solid black; */
 }
 .head-two{ font-size: 30px;
 }
 .sec-sec-div{
     padding:0 10%;  display: flex; text-align: center;  
     justify-content: center; align-items: center;
-    border: 2px solid black;
+    /* border: 2px solid black; */
 }
-.div-three{
-    margin-top: 8vh; display: flex;  border: 2px solid black; width: 100%;
+.div-three-one{  width: 100%;  justify-content: center;align-items: center;
+    /* border: 2px solid black; */
 }
-.img-one{ height: 350px; background-color: rgb(226, 243, 243); border-top-left-radius: 180px ; border-top-right-radius: 180px ; padding-top: 35px; width: 250px; margin-right: 10px;
 
-    justify-content: center; align-items: center;}
+.div-three{
+      margin-top: 8vh; display: flex;width: 100%;
+      /* border: 2px solid black; */
+}
+.img-one{ height: 350px; background-color: rgb(226, 243, 243);     border-top-left-radius: 180px ; border-top-right-radius: 180px ; padding-top: 35px; width: 250px; margin-right: 10px; }
 
 .img-two{ height: 350px; background-color: rgb(199, 235, 183); border-top-left-radius: 180px ; border-top-right-radius: 180px ; padding-top: 35px; width: 250px; margin-right: 10px; 
 
@@ -50,9 +54,7 @@ border: 2px solid black;
 .img-three{ height: 350px; background-color: rgb(238, 231, 237); border-top-left-radius: 180px ; border-top-right-radius: 180px ; padding-top: 35px; width: 250px; 
     justify-content: center; align-items: center;}
 
-.div-three-one{  width: 100%;  justify-content: center;align-items: center;
-    border: 2px solid black;
-}
+
 .div-three-one p{text-align: center;  }
 .div-three-one img{
 justify-content: center; align-items: center;
