--- a/flower.css
+++ b/flower.css
@@ -2,7 +2,7 @@
 /* First Section */
 .first-section{ background-color: #f5f5e4;background-repeat: no-repeat; background-position: center; display: flex; width: 100%; height: 80vh;  background-size: cover; margin-bottom: 10px;}
 
-.first-article{ padding-left: 180px; padding-top: 100px; text-align: left;   width: 50%;
+.first-article{ padding-left: 180px; padding-top: 20px; text-align: left;   width: 50%;
 /* border: 2px solid black; */
 }
 
@@ -10,28 +10,34 @@
     /* border: 2px solid black;  */width: 50%; 
 }
 
-.first-article-two img{ height: 500px; align-items: end;  
-padding: 150px 100px 0 100px;}
+.first-article-two img{ height: 420px; align-items: end;  
+padding: 10px 10px 0px 10px; margin-top: 60px;
+/* border: 2px solid black; */
+}
 
 .head-one{
     font-size: 40px; padding-top: 10px;
 }
+
 .first-btn{ padding:10px 20px; font-weight: 600; background-color: aqua; font-size: large; border-radius: 10px;}
 
 .para-one{ font-size: 18px;}
+
+
 
 /* sceond Section */
 
 .second-section{ align-items: center; margin-top: 15vh; width: 100%; height: 100vh;
 /* border: 2px solid black; */
 }
-
 .second-article{
     text-align: center;  justify-content: center; 
     /* border: 2px solid black; */
 }
+
 .head-two{ font-size: 30px;
 }
+
 .sec-sec-div{
     padding:0 10%;  display: flex; text-align: center;  
     justify-content: center; align-items: center;
@@ -45,15 +51,27 @@ padding: 150px 100px 0 100px;}
       margin-top: 8vh; display: flex;width: 100%;
       /* border: 2px solid black; */
 }
-.img-one{ height: 350px; background-color: rgb(226, 243, 243);     border-top-left-radius: 180px ; border-top-right-radius: 180px ; padding-top: 35px; width: 250px; margin-right: 10px; }
+/* .img-one{ height: 350px; background-color: rgb(226, 243, 243);     border-top-left-radius: 180px ; border-top-right-radius: 180px ; padding-top: 35px; width: 250px; margin-right: 10px; }
 
 .img-two{ height: 350px; background-color: rgb(199, 235, 183); border-top-left-radius: 180px ; border-top-right-radius: 180px ; padding-top: 35px; width: 250px; margin-right: 10px; 
 
 }
 
 .img-three{ height: 350px; background-color: rgb(238, 231, 237); border-top-left-radius: 180px ; border-top-right-radius: 180px ; padding-top: 35px; width: 250px; 
-    justify-content: center; align-items: center;}
+    justify-content: center; align-items: center;}  */
 
+.img-one, .img-two, .img-three{
+    height: 350px;  border-top-left-radius: 180px ; border-top-right-radius: 180px ; padding-top: 35px; width: 250px; margin-right: 10px; 
+} 
+.img-one{
+    background-color: rgb(226, 243, 243);  
+}
+.img-two{
+background-color: rgb(199, 235, 183); 
+}
+.img-three{
+ background-color: rgb(238, 231, 237);
+}
 
 .div-three-one p{text-align: center;  }
 .div-three-one img{
@@ -98,14 +116,30 @@ justify-content: center; align-items: center;
 
 /* Section Ten */
 .section-ten{
-    display: flex; background-color: lightgray; justify-content: space-around; padding: 15px; margin-left:37vh; margin-right: 37vh;
+    display: flex; background-color: lightgray; justify-content: space-evenly; padding: 15px; 
+    margin: 150px 180px 100px 180px;
+    
+    /* margin-left:37vh; margin-right: 37vh;
+    margin-top: 150px; */
+    /* border: 2px solid black; */
 }
-.div-ten img{ align-items: center; text-align: center; padding: 5px 15px;}
-#img-ten{
+/* .div-ten{
+      border: 2px solid black;
+} */
+.div-ten img{ 
+    /* align-items: center; justify-content: center;  */
+    padding: 5px 15px;
+}
+.div-ten p{
+    text-align: center;
+}
+    
+
+/* #img-ten{
     padding-left: 12vh;
 }
 #img-ten-one{ padding-left: 12vh;
-}
+} */
 
 
 @media screen and (max-width:576px) {
