--- a/flower.css
+++ b/flower.css
@@ -34,7 +34,9 @@ padding: 10px 10px 0px 10px; margin-top: 60px;
     text-align: center;  justify-content: center; 
     /* border: 2px solid black; */
 }
-
+#sce-para{
+    font-size: 25px;
+}
 .head-two{ font-size: 30px;
 }
 
@@ -143,15 +145,26 @@ justify-content: center; align-items: center;
 
 
 @media screen and (max-width:576px) {
-    body{
+    /* body{
         border:5px solid black
-    }
+    } */
     .first-article-two{display: none;  }
-    .first-section{ width: 100%; height: 100%;}
-    .first-article{ text-align: center; padding-bottom: 10px;}
-
-
+    .first-section{ width: 100%; height: 100%;
+  }
+    .first-article{ padding-bottom: 20px;  padding-right: 150px;
+       text-align: center;
+         /* border: 2px solid black;   */
     
+    }
+    .head-one{
+        font-size: 25px; 
+    }
+   
+/* sceond-section */
+
+  #sce-para{
+        font-size: 20px;
+    }
     .sec-sec-div{display: flex;  height: 100%; margin-top: 20px; }
     .div-three{
          height: 100%; flex-direction: column; }
@@ -160,11 +173,56 @@ justify-content: center; align-items: center;
 .div-three-one img{
     height: 150px;  width: 150px;border-top-right-radius: 150px; border-top-left-radius:150px ; justify-content: center; align-items: center; object-fit: cover; flex-direction: column; margin: auto;
 }
+.second-section{
+    margin-bottom: 300px;
+}
+
+/* Delivery Section */
+
+
     .section-ten{
-       display: none;
+       /* display: none; */
+       margin-top: 400px; display: flex; flex-direction: column; justify-content: space-evenly; align-items: center;
     }
+
+
+
+/* Third-section */
 
     .third-sec-art-two img{
         display: none;
     }
+/* .third-section{
+    border: 2px solid black;
+} */
+    .third-sec-art {
+        /* display: flex; flex-direction: column; justify-content: center; align-items: center; */
+        text-align: center; padding-left: 130px; padding-top: 50px; 
+    }
+
+
+/* Forth-section */
+.Forth-sec-art p{
+    font-size: 20px;
+}
+.Forth-sec-art-second{
+    display: flex; flex-direction: column; align-items: center; justify-content: center; 
+}
+.Forth-sec-art-second img{ margin-bottom: 10px; width: 200px;}
+
+
+/* Fifth-section */
+.Fifth-section{
+    width: 100%;margin: 0%;
+}
+
+/* Footer */
+
+.footer-one{
+    margin-top: 50px; padding: 70px 20px ; 
+}
+#para-foot{
+    font-size: 16px;
+}
+
 }
